[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Main_menu/Fonts/Tahoma.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Main_menu/Scripts/Config.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Main_menu/Icons/Configuration/Maps.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Main_menu/Scripts/Main_Menu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Main_menu/Fonts/Open_Crops.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/Main_menu/Logos/Open-Crops/Open-Crops_Logo_256.jpg" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.301961, 0.298039, 0.321569, 1 )

[sub_resource type="DynamicFont" id=2]
size = 145
outline_size = 5
outline_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.2, 0.2, 0.2, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=13]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 100
outline_size = 5
outline_color = Color( 0.568627, 0.0313726, 0.0313726, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 100
outline_size = 5
outline_color = Color( 0.580392, 0.596078, 0.0627451, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 100
outline_size = 5
outline_color = Color( 0.0313726, 0.501961, 0.0313726, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Visibility_Control_Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
margin_bottom = -824.0
rect_min_size = Vector2( 1920, 256 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_Panel" type="Panel" parent="Header"]
margin_right = 1920.0
margin_bottom = 256.0
rect_min_size = Vector2( 1920, 256 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )

[node name="Open_Crops_Logo" type="TextureRect" parent="Header/Background_Panel"]
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open_Crops_Header" type="RichTextLabel" parent="Header/Background_Panel"]
margin_left = 256.0
margin_right = 1156.0
margin_bottom = 256.0
rect_min_size = Vector2( 900, 256 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = SubResource( 2 )
visible_characters = 0
text = "Open-Crops"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version_Label" type="RichTextLabel" parent="Header/Background_Panel"]
visible = false
margin_left = 1050.0
margin_top = 148.007
margin_right = 1300.0
margin_bottom = 298.007
rect_rotation = -22.5
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.972549, 0.498039, 0.294118, 1 )
text = " .Alpha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuration_WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -320.0
margin_right = 300.0
margin_bottom = 380.0
custom_styles/panel = SubResource( 12 )
window_title = "Configuration"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Configuration_WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -300.0
margin_right = 290.0
margin_bottom = 300.0
custom_constants/vseparation = 45
custom_constants/hseparation = 58
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Maps_Button" type="Button" parent="Configuration_WindowDialog/GridContainer"]
margin_right = 268.0
margin_bottom = 262.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="Enviroment_Label" type="RichTextLabel" parent="Configuration_WindowDialog/GridContainer/Maps_Button"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = 8.0
margin_right = 100.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Enviroment[/center]"
text = "Enviroment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visibility_Control_Main_Menu_Buttons" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -142.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Button" type="Button" parent="Visibility_Control_Main_Menu_Buttons"]
margin_right = 640.0
margin_bottom = 142.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configure_Button" type="Button" parent="Visibility_Control_Main_Menu_Buttons"]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 142.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 10 )
enabled_focus_mode = 0
text = "Configure"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Game_Button" type="Button" parent="Visibility_Control_Main_Menu_Buttons"]
margin_left = 1280.0
margin_right = 1920.0
margin_bottom = 142.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 11 )
enabled_focus_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Temp" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -40.0
margin_right = 250.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 14 )
bbcode_enabled = true
bbcode_text = "[center]Nice Slideshow Here ;)[/center]"
text = "Nice Slideshow Here ;)"
[connection signal="pressed" from="Configuration_WindowDialog/GridContainer/Maps_Button" to="Configuration_WindowDialog" method="_on_Maps_Button_pressed"]
[connection signal="pressed" from="Visibility_Control_Main_Menu_Buttons/Exit_Button" to="." method="_On_Exit_Button_Pressed"]
[connection signal="pressed" from="Visibility_Control_Main_Menu_Buttons/Configure_Button" to="." method="_on_Configure_Button_Pressed"]
[connection signal="pressed" from="Visibility_Control_Main_Menu_Buttons/Start_Game_Button" to="." method="_On_Start_Game_Button_Pressed"]
